# soft-fp64

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
adapters/acpp_metal/: CMakeLists.txt  README.md  acpp_metal_math.cpp  acpp_metal_primitives.cpp
adapters/acpp_metal/cmake/: check_forwarder_symbols.cmake  rewrite_sleef_include.cmake
bench/: README.md  baseline.json  compare.py
cmake/: soft_fp64Config.cmake.in
fuzz/: README.md  fuzz_sqrt_fma.cpp
include/soft_fp64/: soft_f64.h
scripts/: check_no_host_fp.sh  check_readme_claim_parity.py  pre_push.sh
src/: arithmetic.cpp  convert.cpp  fenv.cpp  internal_arith.h  internal_classify.h  sqrt_fma.cpp
src/sleef/: sleef_common.h  sleef_exp_log.cpp  sleef_fe_macros.h  sleef_internal.h  sleef_inv_hyp_pow.cpp  sleef_stubs.cpp  sleef_trig.cpp
tests/: CMakeLists.txt  test_coverage_mpfr.cpp  test_fenv.cpp  test_reentrancy.cpp  test_rounding_modes.cpp
tests/mpfr/: test_mpfr_diff.cpp
tests/testfloat/: run_testfloat.cpp
