# AdaptiveCpp Metal SSCP external soft-fp64 adapter.
#
# AdaptiveCpp's Metal libkernel globs *.cpp from a single directory
# (non-recursive) pointed at by -DACPP_METAL_EXTERNAL_FP64_DIR, and
# compiles them into the libkernel bitcode. There is no static-archive
# link step: every translation unit needed to resolve sf64_* must be
# present in that directory, and every #include path those TUs use must
# resolve inside it.
#
# Our core source tree has two include-path shapes that would break in a
# flat staged dir:
#   1. src/*.cpp include "internal.h" (sibling) and "soft_fp64/soft_f64.h"
#      (public header, found via -I include/).
#   2. src/sleef/*.cpp include "sleef_internal.h" (sibling), which in turn
#      includes "../../include/soft_fp64/soft_f64.h" / ".../defines.h"
#      — a relative path tied to the repo layout.
#
# This target stages a flat directory with:
#   staged/
#     soft_fp64/                (copy of include/soft_fp64/, so quoted
#                                #include "soft_fp64/foo.h" resolves
#                                relative to the .cpp's directory)
#     internal.h                (from src/)
#     sleef_common.h            (rewritten: ../../include/... -> ./...)
#     sleef_internal.h          (rewritten: ../../include/... -> ./...)
#     arithmetic.cpp, classify.cpp, compare.cpp, convert.cpp,
#     rounding.cpp, sqrt_fma.cpp,
#     sleef_exp_log.cpp, sleef_inv_hyp_pow.cpp,
#     sleef_stubs.cpp, sleef_trig.cpp,
#     acpp_metal_primitives.cpp, acpp_metal_math.cpp
#
# Consumer usage:
#   cmake -S /path/to/AdaptiveCpp -B /path/to/acpp-build \
#         -DACPP_METAL_EXTERNAL_FP64_DIR=<soft-fp64 build>/adapters/acpp_metal/staged
#   cmake --build /path/to/acpp-build --target libkernel-metal-bitcode
#
# The staging approach trades a one-time copy for zero intrusion on the
# core layout and a clean non-overlapping symbol surface. The staged
# archive itself is not a link artefact — no libsoft_fp64_acpp_metal.a
# is emitted, so install-smoke's ABI grep (sf64_*-only) is unaffected.

set(SF64_STAGE_DIR "${CMAKE_CURRENT_BINARY_DIR}/staged")
file(MAKE_DIRECTORY "${SF64_STAGE_DIR}")
file(MAKE_DIRECTORY "${SF64_STAGE_DIR}/soft_fp64")

# Resolve the core's `SOFT_FP64_FENV` build option to the matching
# integer `SOFT_FP64_FENV_MODE` value, using the same mapping as the
# top-level CMakeLists.txt (disabled=0, tls=1, explicit=2). The parent
# scope's cache variable is visible here because the adapter is wired
# in via add_subdirectory(); we default to `tls` when it is unset so a
# standalone adapter build (or a consumer that forgot to pass the flag)
# behaves like the core's default. Mis-spellings are hard-fail — the
# top-level would already have rejected them, but the adapter repeats
# the check so a future standalone build surfaces the same error.
if(NOT DEFINED SOFT_FP64_FENV)
    set(SOFT_FP64_FENV "tls")
endif()
if(SOFT_FP64_FENV STREQUAL "tls")
    set(SF64_ACPP_METAL_CORE_FENV_MODE 1)
elseif(SOFT_FP64_FENV STREQUAL "disabled")
    set(SF64_ACPP_METAL_CORE_FENV_MODE 0)
elseif(SOFT_FP64_FENV STREQUAL "explicit")
    set(SF64_ACPP_METAL_CORE_FENV_MODE 2)
else()
    message(FATAL_ERROR
        "adapters/acpp_metal: SOFT_FP64_FENV must be tls | disabled | explicit "
        "(got '${SOFT_FP64_FENV}')")
endif()

# Metal-side fenv mode resolution.
#
# The Metal Shading Language has no `thread_local` storage class, so the
# `tls` mode (which compiles `extern thread_local unsigned
# sf64_internal_fe_flags` in src/internal_fenv.h) cannot be honoured on
# the GPU side. When the core build selects `tls`, the staged Metal
# bitcode sources are forced down to `disabled` mode so the no-op raise
# path is compiled instead. The host-side forwarder link-smoke archive
# (further down) keeps the actual core mode — `thread_local` works
# fine on the host, and that target only proves symbol resolution.
#
# This is a visible fall-back, not a silent override: the STATUS
# message below makes the demotion obvious in the configure log so a
# user who asked for fenv flags on Metal sees that the bitcode side
# could not deliver.
set(SF64_ACPP_METAL_FENV_MODE ${SF64_ACPP_METAL_CORE_FENV_MODE})
if(SOFT_FP64_FENV STREQUAL "tls")
    set(SF64_ACPP_METAL_FENV_MODE 0)
    message(STATUS
        "soft_fp64 acpp_metal: Metal bitcode lacks thread_local; fenv mode "
        "forced to disabled (core mode: ${SOFT_FP64_FENV})")
endif()

# Stage a tiny companion header alongside the bitcode sources. The
# rewritten `internal_fenv.h` `#include`s it (see
# cmake/stage_internal_fenv.cmake) so AdaptiveCpp's libkernel build
# sees the resolved `SOFT_FP64_FENV_MODE` (after the Metal TLS fall-
# back above) without any extra -D flags on the consumer's side.
set(SF64_FENV_MODE_HEADER "${SF64_STAGE_DIR}/sf64_fenv_mode.h")
file(WRITE "${SF64_FENV_MODE_HEADER}.in"
    "// Auto-generated by adapters/acpp_metal/CMakeLists.txt — do not edit.\n"
    "// Pins SOFT_FP64_FENV_MODE for the staged Metal bitcode sources.\n"
    "// Note: when the core build selects `tls`, this is forced to 0\n"
    "// (disabled) because Metal Shading Language has no thread_local.\n"
    "//\n"
    "// SPDX-License-Identifier: MIT\n"
    "#pragma once\n"
    "\n"
    "#ifndef SOFT_FP64_FENV_MODE\n"
    "#define SOFT_FP64_FENV_MODE @SF64_ACPP_METAL_FENV_MODE@\n"
    "#endif\n")
configure_file("${SF64_FENV_MODE_HEADER}.in" "${SF64_FENV_MODE_HEADER}" @ONLY)

message(STATUS "soft-fp64 ACPP Metal adapter: SOFT_FP64_FENV=${SOFT_FP64_FENV} "
               "-> staged SOFT_FP64_FENV_MODE=${SF64_ACPP_METAL_FENV_MODE} "
               "(host forwarders: ${SF64_ACPP_METAL_CORE_FENV_MODE})")

set(SF64_CORE_CPP
    arithmetic.cpp
    classify.cpp
    compare.cpp
    convert.cpp
    rounding.cpp
    sqrt_fma.cpp)

set(SF64_SLEEF_CPP
    sleef_exp_log.cpp
    sleef_inv_hyp_pow.cpp
    sleef_stubs.cpp
    sleef_trig.cpp)

set(SF64_STAGED_OUTPUTS)

# Public headers: copy the full include/soft_fp64/ tree verbatim.
file(GLOB SF64_PUBLIC_HEADERS
     "${CMAKE_SOURCE_DIR}/include/soft_fp64/*.h")
foreach(hdr ${SF64_PUBLIC_HEADERS})
    get_filename_component(name "${hdr}" NAME)
    set(dst "${SF64_STAGE_DIR}/soft_fp64/${name}")
    add_custom_command(
        OUTPUT "${dst}"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different "${hdr}" "${dst}"
        DEPENDS "${hdr}"
        COMMENT "Staging soft_fp64/${name}")
    list(APPEND SF64_STAGED_OUTPUTS "${dst}")
endforeach()

# src/internal.h, src/internal_arith.h — private headers included as
# siblings by the core TUs (`sqrt_fma.cpp`, `arithmetic.cpp`,
# `rounding.cpp`, etc.); resolve `soft_fp64/defines.h` via the staged
# soft_fp64/ subdir next to them. Copied verbatim; nothing to rewrite.
foreach(hdr internal.h internal_arith.h)
    set(dst "${SF64_STAGE_DIR}/${hdr}")
    add_custom_command(
        OUTPUT "${dst}"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${CMAKE_SOURCE_DIR}/src/${hdr}"
                "${dst}"
        DEPENDS "${CMAKE_SOURCE_DIR}/src/${hdr}"
        COMMENT "Staging ${hdr}")
    list(APPEND SF64_STAGED_OUTPUTS "${dst}")
endforeach()

# src/internal_fenv.h — staged through stage_internal_fenv.cmake so a
# `#include "sf64_fenv_mode.h"` is prepended. That companion header
# (written above via configure_file) pins SOFT_FP64_FENV_MODE to match
# the core build's `SOFT_FP64_FENV`. Without this prepend, the
# upstream header's `#ifndef SOFT_FP64_FENV_MODE` fallback would hard-
# code the adapter to the tls-mode path regardless of the core
# configuration (the original drift bug).
set(dst "${SF64_STAGE_DIR}/internal_fenv.h")
add_custom_command(
    OUTPUT "${dst}"
    COMMAND ${CMAKE_COMMAND} -DINPUT=${CMAKE_SOURCE_DIR}/src/internal_fenv.h
                             -DOUTPUT=${dst}
                             -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/stage_internal_fenv.cmake
    DEPENDS "${CMAKE_SOURCE_DIR}/src/internal_fenv.h"
            "${CMAKE_CURRENT_SOURCE_DIR}/cmake/stage_internal_fenv.cmake"
            "${SF64_FENV_MODE_HEADER}"
    COMMENT "Staging internal_fenv.h with SOFT_FP64_FENV_MODE=${SF64_ACPP_METAL_FENV_MODE} pin")
list(APPEND SF64_STAGED_OUTPUTS "${dst}")

# src/*.cpp — copy verbatim. Their includes are "internal.h" (sibling)
# and "soft_fp64/soft_f64.h" (next to .cpp via staged soft_fp64/).
foreach(src_cpp ${SF64_CORE_CPP})
    set(dst "${SF64_STAGE_DIR}/${src_cpp}")
    add_custom_command(
        OUTPUT "${dst}"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${CMAKE_SOURCE_DIR}/src/${src_cpp}"
                "${dst}"
        DEPENDS "${CMAKE_SOURCE_DIR}/src/${src_cpp}"
        COMMENT "Staging src/${src_cpp}")
    list(APPEND SF64_STAGED_OUTPUTS "${dst}")
endforeach()

# src/sleef/sleef_common.h and sleef_internal.h — rewrite the
# ../../include/soft_fp64/ include prefix to plain soft_fp64/ so they
# resolve next to the staged .cpp files. sleef_internal.h also includes
# sleef_common.h (sibling), which stays unchanged.
foreach(hdr sleef_common.h sleef_internal.h)
    set(dst "${SF64_STAGE_DIR}/${hdr}")
    add_custom_command(
        OUTPUT "${dst}"
        COMMAND ${CMAKE_COMMAND} -DINPUT=${CMAKE_SOURCE_DIR}/src/sleef/${hdr}
                                 -DOUTPUT=${dst}
                                 -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/rewrite_sleef_include.cmake
        DEPENDS "${CMAKE_SOURCE_DIR}/src/sleef/${hdr}"
                "${CMAKE_CURRENT_SOURCE_DIR}/cmake/rewrite_sleef_include.cmake"
        COMMENT "Staging sleef/${hdr} with include-path rewrite")
    list(APPEND SF64_STAGED_OUTPUTS "${dst}")
endforeach()

# src/sleef/*.cpp — route through the same include-rewrite used for the
# SLEEF headers. Most TUs only reference sibling sleef_internal.h, but
# at least one (`sleef_inv_hyp_pow.cpp`) reaches up to
# `../internal_fenv.h` in the upstream tree — in the flat staged layout
# that header is a sibling, so the rewrite converts the path.
foreach(sleef_cpp ${SF64_SLEEF_CPP})
    set(dst "${SF64_STAGE_DIR}/${sleef_cpp}")
    add_custom_command(
        OUTPUT "${dst}"
        COMMAND ${CMAKE_COMMAND} -DINPUT=${CMAKE_SOURCE_DIR}/src/sleef/${sleef_cpp}
                                 -DOUTPUT=${dst}
                                 -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/rewrite_sleef_include.cmake
        DEPENDS "${CMAKE_SOURCE_DIR}/src/sleef/${sleef_cpp}"
                "${CMAKE_CURRENT_SOURCE_DIR}/cmake/rewrite_sleef_include.cmake"
        COMMENT "Staging sleef/${sleef_cpp} with include-path rewrite")
    list(APPEND SF64_STAGED_OUTPUTS "${dst}")
endforeach()

# The two forwarder TUs themselves.
foreach(fwd acpp_metal_primitives.cpp acpp_metal_math.cpp)
    set(dst "${SF64_STAGE_DIR}/${fwd}")
    add_custom_command(
        OUTPUT "${dst}"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${CMAKE_CURRENT_SOURCE_DIR}/${fwd}"
                "${dst}"
        DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${fwd}"
        COMMENT "Staging ${fwd}")
    list(APPEND SF64_STAGED_OUTPUTS "${dst}")
endforeach()

add_custom_target(soft_fp64_acpp_metal_stage ALL
    DEPENDS ${SF64_STAGED_OUTPUTS}
    COMMENT "Staged AdaptiveCpp Metal fp64 sources at ${SF64_STAGE_DIR}")

set(SOFT_FP64_ACPP_METAL_STAGED_DIR "${SF64_STAGE_DIR}" CACHE PATH
    "Absolute path to the staged fp64 source directory to pass as ACPP_METAL_EXTERNAL_FP64_DIR when configuring AdaptiveCpp." FORCE)

message(STATUS "soft-fp64 ACPP Metal adapter: stage dir = ${SF64_STAGE_DIR}")

# ----------------------------------------------------------------------------
# Link-smoke target: compiles the two forwarder TUs against the main
# soft_fp64 library and produces a non-installed static archive. Its
# only job is to prove that every sf64_* entry point the forwarders
# reference actually resolves, and that every advertised
# __acpp_sscp_*_f64 / __acpp_sscp_soft_f64_* symbol is defined.
#
# The archive is deliberately NOT exported, NOT installed, and does NOT
# feed the install-smoke ABI grep — its forwarder symbols would (by
# design) violate the sf64_*-only rule for the installed archive.
# ----------------------------------------------------------------------------
add_library(soft_fp64_acpp_metal_forwarders STATIC
    "${CMAKE_CURRENT_SOURCE_DIR}/acpp_metal_primitives.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/acpp_metal_math.cpp")
target_link_libraries(soft_fp64_acpp_metal_forwarders
    PRIVATE soft_fp64::soft_fp64)
target_compile_options(soft_fp64_acpp_metal_forwarders PRIVATE
    -ffp-contract=off -fno-math-errno)
# Mirror the *core* target's fenv mode on the forwarder TUs. These are
# host-compiled (not Metal bitcode), so `thread_local` is fine and we
# do **not** apply the Metal TLS fall-back here — the link-smoke
# archive should match the actual core build, not the demoted staged
# tree. Linking against soft_fp64::soft_fp64 already brings in the
# core's SOFT_FP64_FENV_MODE for any inlined headers the forwarders
# pull through; the explicit -D here keeps the per-TU value visible
# in compile_commands.json.
target_compile_definitions(soft_fp64_acpp_metal_forwarders PRIVATE
    SOFT_FP64_FENV_MODE=${SF64_ACPP_METAL_CORE_FENV_MODE})
set_target_properties(soft_fp64_acpp_metal_forwarders PROPERTIES
    POSITION_INDEPENDENT_CODE ON)

# ctest-visible link smoke. Runs nm against the freshly built archive
# and asserts a representative set of the advertised symbol surface is
# present. Failure here means either the forwarders failed to compile,
# or a symbol listed in adapters/acpp_metal/README.md's coverage table
# silently dropped off the surface.
find_program(NM_EXECUTABLE NAMES nm llvm-nm)
if(NM_EXECUTABLE AND SOFT_FP64_BUILD_TESTS)
    add_test(NAME test_acpp_metal_adapter_link
        COMMAND ${CMAKE_COMMAND}
            -DNM=${NM_EXECUTABLE}
            -DARCHIVE=$<TARGET_FILE:soft_fp64_acpp_metal_forwarders>
            -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/check_forwarder_symbols.cmake)
endif()
